--- a/index.html
+++ b/index.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prize By Numbers - Paint, Scan, Win!</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
-</head>
-<body>
-
-    <header class="navbar">
-        <div class="container">
-            <h1 class="logo">PRIZE BY NUMBERS</h1>
-            <nav class="nav-links">
-                <a href="#how-it-works">How It Works</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#faq">FAQ</a>
-                <a href="#buy-now" class="button primary-button">BUY NOW</a>
-            </nav>
-            <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
-        </div>
-    </header>
-
-    <main>
-        <section id="hero" class="hero-section splash-bg">
+<main>
+        <section id="hero" class="hero-section paint-splatter-bg">
             <div class="container">
                 <div class="hero-content">
                     <div class="prize-tag">WIN UP TO $20,000!</div>
@@ -42,48 +18,27 @@
                 <div class="step-grid">
                     <div class="step-card">
                         <span class="step-number">1</span>
-                        <h3>PAINT</h3>
-                        <p>Relax and complete your beautiful paint-by-numbers canvas. It looks like abstract art, but it's much more...</p>
+                        <h3>GRAB BRUSH. ADD COLOR.</h3>
+                        <p>You know the drill. It's paint-by-numbers. Don't overthink it. (Though, there is a secret. Obviously.)</p>
                     </div>
                     <div class="step-card">
                         <span class="step-number">2</span>
-                        <h3>REVEAL & SCAN</h3>
-                        <p>Once finished, the painted image is a scannable QR code! Use your phone to scan it and go to the prize site.</p>
+                        <h3>DONE? GOOD. SCAN IT.</h3>
+                        <p>Yeah, that's a QR code. Use your phone's camera. It'll take you straight to the good stuff.</p>
                     </div>
                     <div class="step-card">
                         <span class="step-number">3</span>
-                        <h3>WIN</h3>
-                        <p>Enter your unique kit code on the website and find out how much you’ve won—from **$1 to $20,000!**</p>
+                        <h3>ENTER CODE. COLLECT CASH.</h3>
+                        <p>Seriously. Just type in your secret number. Bam. Money. Don't thank us, thank your amazing art skills.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="pricing" class="section dark-section">
+        <section id="signup" class="section paint-splatter-bg">
             <div class="container">
-                <h2 class="section-title">THE KIT</h2>
-                <div class="pricing-card-container">
-                    <div class="pricing-card">
-                        <h3>PRIZE BY NUMBERS KIT</h3>
-                        <p class="price-tag">Starting at $29.99</p>
-                        <ul>
-                            <li>Premium Cotton Canvas (11"x14")</li>
-                            <li>Numbered Acrylic Paint Set</li>
-                            <li>3-Piece Brush Set</li>
-                            <li>The potential to win up to $20,000!</li>
-                            <li>Unique Prize Redemption Code (Inside)</li>
-                        </ul>
-                        <a href="#" id="buy-now" class="button primary-button">LINK TO SHOP</a>
-                    </div>
-                </div>
-                <p class="small-print">*Prize amounts range from \$1.00 to \$20,000. Every kit is a guaranteed winner.</p>
-            </div>
-        </section>
-
-        <section id="signup" class="section">
-            <div class="container">
-                <h2 class="section-title">DON'T MISS OUT!</h2>
-                <p class="section-subtitle">Get exclusive updates on new designs and special prize drops.</p>
+                <h2 class="section-title">WANT MORE AWESOME?</h2>
+                <p class="section-subtitle">Give us your info. We'll tell you when new ways to win (and relax) drop.</p>
                 <form id="signup-form" class="signup-form">
                     <input type="email" name="email" placeholder="Email Address" required>
                     <input type="tel" name="phone" placeholder="Phone Number (Optional)">
@@ -103,7 +58,7 @@
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Is this a lottery?</h3>
-                        <p class="faq-answer">No. This is a creative art product. The prize is an added bonus for completing the artwork. There is no purchase necessary for a chance to win. See full rules on our redemption site.</p>
+                        <p class="faq-answer">**Please.** This is art. With money attached. It's better. (And legally, totally different.) There is no purchase necessary for a chance to win. See full rules on our redemption site.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">How do I get my prize money?</h3>
@@ -117,22 +72,3 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Prize By Numbers. All rights reserved. | <a href="#">Rules</a> | <a href="#">Privacy</a></p>
-        </div>
-    </footer>
-
-    <div id="mobile-menu" class="mobile-menu-overlay">
-        <a class="close-btn">&times;</a>
-        <a href="#hero">Home</a>
-        <a href="#how-it-works">How It Works</a>
-        <a href="#pricing">Pricing</a>
-        <a href="#faq">FAQ</a>
-        <a href="#buy-now" class="button primary-button">BUY NOW</a>
-    </div>
-
-    <script src="app.js"></script>
-</body>
-</html>
